plugins {
	id 'fabric-loom' version '1.10-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// HOCON Configuration Library
	include(implementation 'com.typesafe:config:1.4.3')

	// JDCB drivers
	//include(implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.1')	// MariaDB
	//include(implementation 'org.xerial:sqlite-jdbc:3.47.1.0')				// SQLite
	//include(implementation 'org.postgresql:postgresql:42.7.4')			// PostgreSQL
	include(implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0')

	modImplementation("net.fabricmc:fabric-language-kotlin:1.13.0+kotlin.2.1.0")

	// Javalin Web Framework
	include(implementation 'io.javalin:javalin:6.4.0')
	include(implementation 'org.eclipse.jetty:jetty-server:11.0.24')
	include(implementation 'org.eclipse.jetty:jetty-webapp:11.0.24')
	include(implementation 'org.eclipse.jetty.toolchain:jetty-jakarta-servlet-api:5.0.2')
	include(implementation 'org.eclipse.jetty:jetty-util:11.0.24')
	include(implementation 'org.eclipse.jetty:jetty-http:11.0.24')
	include(implementation 'org.eclipse.jetty:jetty-servlet:11.0.24')
	include(implementation 'org.eclipse.jetty:jetty-security:11.0.24')
	include(implementation 'org.eclipse.jetty:jetty-io:11.0.24')

	// Permissions API
	include(modImplementation 'me.lucko:fabric-permissions-api:0.3.1')
	
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}